[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/Boss/robot_boss_one.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Mob/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Boss/Boss.gd" type="Script" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.4686
height = 1.21454

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/AttackHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "chase"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 231.054

[sub_resource type="CapsuleShape2D" id=8]
radius = 17.9999
height = 50.0652

[sub_resource type="CapsuleShape2D" id=5]
radius = 33.009
height = 16.3644

[sub_resource type="CapsuleShape2D" id=9]
height = 8.0

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 16 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/chase = SubResource( 7 )

[node name="Timer" type="Timer" parent="AnimationPlayer"]

[node name="Stats" parent="." instance=ExtResource( 8 )]
max_health = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 4 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="HitBoxPivot" type="Position2D" parent="."]
visible = false

[node name="AttackHitBox" parent="HitBoxPivot" instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBoxPivot/AttackHitBox" index="0"]
position = Vector2( -8.34276, -7.62939e-06 )
rotation = 1.5708
shape = SubResource( 8 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -8.00903, 4.00452 )
shape = SubResource( 5 )

[node name="BodyHitBox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="BodyHitBox" index="0"]
position = Vector2( -8, 11 )
rotation = 1.5708
shape = SubResource( 9 )

[connection signal="timeout" from="AnimationPlayer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="HitBoxPivot/AttackHitBox"]
[editable path="Hurtbox"]
[editable path="BodyHitBox"]
